--- a/src/contact.css
+++ b/src/contact.css
@@ -44,7 +44,6 @@
     rgba(177, 227, 255, 1) 10%,
     rgba(137, 212, 255, 1) 100%
   );
-  /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); */
   border-radius: 20px;
   position: relative;
 }
@@ -97,7 +96,9 @@
 .app.dark-mode .card_contact:hover {
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.4);
 }
-
+.app.dark-mode .card_contact_half {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.1);
+}
 .app.dark-mode .svg_circle {
   background: none;
   border: 2px solid rgb(255, 255, 255);
