--- a/src/project.css
+++ b/src/project.css
@@ -29,7 +29,7 @@
 .project-container {
   height: auto;
   width: auto;
-  /* padding-top: 5vh; */
+  padding-top: 10vh;
 }
 .project-title {
   padding-top: 1px;
@@ -41,16 +41,6 @@
   justify-content: center;
   gap: 10px;
 }
-/* .container-project {
-  color: var(--second-text-color);
-  height: 50vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 20px;
-  gap: 15px;
-} */
 
 .wrapper-project {
   background-color: var(--second-bg-color);
@@ -62,7 +52,6 @@
 }
 
 .card-project {
-  /* padding-top: 100px; */
   flex-wrap: wrap;
   padding: 30px;
   padding-bottom: 20vh;
@@ -73,12 +62,8 @@
   gap: 10px;
 }
 
-/* .card-project h1 {
-  padding-top: 120px;
-} */
-
 .card-github {
-  border-radius: 10px;
+  border-radius: 25px;
   padding: 30px;
   color: var(--second-text-color);
   background: linear-gradient(
@@ -90,17 +75,16 @@
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s ease-out;
 }
+.card-github:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.4);
+  border: 1px solid var(--second-bg-color);
+}
 .app.dark-mode .card-github {
   color: var(--dark-mode-text);
   background: none;
   background-color: var(--dark-mode-bg);
 }
-.card-github:hover {
-  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.4);
-  background-color: white;
-  color: black;
-  border: 1px solid var(--main-bg-color);
-}
+
 .app.dark-mode .card-github:hover {
   background-color: var(--dark-mode-bg);
   color: white;
@@ -120,7 +104,7 @@
     padding-bottom: 10vh;
   }
   .card-project {
-    flex-direction: column;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
     padding: 10px;
@@ -129,7 +113,9 @@
     padding-top: 10vh;
   }
   .card-github {
-    border-radius: 4%;
+    border-radius: 25px;
+    width: calc(90vw);
+
     padding: 0px;
   }
 }
